:sparkles: (css) force scrollbar visible to avoid window width flickering

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgb(236, 239, 248);
+  overflow-y: scroll;
 }
 
 a,
